0031320: TObj - method TObj_Object::GetFatherObject() is not protected against deleted object